== 1.0.2 2008-10-30

* Lighthouse Project created for tickets/suggestions: http://drnic.lighthouseapp.com/projects/18881-newgem
* newgem no longer generates a website by default; use -w to create one; or -i website; or script/generate install_website
* dev dependency on latest cucumber gem
* no requirement for cucumber gem to be installed [fixes #1]
* hoe is patched and cached within newgem so that README.* is supported [fixes #5]
* rake-automated patching of hoe.rb from patches/hoe/*.patch

== 1.0.1 2008-10-28

* Fix up readme + post-install notices based on 1.0.0 changes [thx Tomasz Muras]
* Remove old rails cucumber generator cruft from env.rb
* Clean up some feature/steps

== 1.0.0 2008-10-21

* Yay for 1.0.0 of New Gem Generator!
* massive overhaul of Hoe definition and rake tasks
  * config/hoe.rb is gone, a more condensed version is back in Rakefile
  * config/dependencies.rb is gone, this functionality is now supported by RubyGems 1.2's dev dependency mechanism
  * generated gems no longer have generated tasks; rather they reuse those in newgem itself
  * to override a task, use the help method +remove_task+
  * Hoe declaration is more concise and reuses the available defaults by Hoe
  * No more wacky CONSTANTS in hoe declaration; reusing $hoe to access these values
  * no more version.rb; the VERSION constant is in lib/+gemname+.rb
* install_website: uses a config/website.yml for username/host/remote_dir (defaults to rubyforge)
* Removed install_rspec_stories which was superseded by install_cucumber

== 0.29.0 2008-10-18

* execute generator uses a lib/appname/cli.rb file
* basic feature descriptions for newgem and executable generators

== 0.28.0 2008-10-17

* Cucumber support: install_cucumber generator, and features generator for cucumber scope

== 0.27.0 2008-09-20

* Remove License.txt as its contents are in README (newgem + generator)
* RedCloth dependency - changed to new 4.0.0 version which is apparently new a shiny + fast