@@ -31,9 +31,11 @@
 <div id="main">
 
     <h1><%%= title %></h1>
-    <div id="version" class="clickable" onclick='document.location = "<%%= download %>"; return false'>
-      <p>Get Version</p>
-      <a href="<%%= download %>" class="numbers"><%%= version %></a>
+    <div class="sidebar">
+      <div id="version" class="clickable" onclick='document.location = "<%%= download %>"; return false'>
+        <p>Get Version</p>
+        <a href="<%%= download %>" class="numbers"><%%= version %></a>
+      </div>
     </div>
     <%%= body %>
     <p class="coda">
