@@ -49,10 +49,10 @@
         <!-- HELP FILE -  http://twitterwidget.jazzychad.com/tw/ -->
         <script language           = "javascript">
         	var jtw_search            = 'newgem';
-        	var jtw_widget_background = 'B3ABFF';
+        	var jtw_widget_background = '9A5535';
         	var jtw_widget_border     = '0';
-        	var jtw_tweet_textcolor   = 'fff';
-          var jtw_tweet_background  = '000';
+        	var jtw_tweet_textcolor   = '141331';
+          var jtw_tweet_background  = '9A5535';
           var jtw_tweet_border      = '0px';
         </script>
         <script src="http://twitterwidget.jazzychad.com/tw/searchwidget.js" type="text/javascript"></script>
